dark mode homepage fix

--- a/frontend/website/src/app/components/home/home.component.scss
+++ b/frontend/website/src/app/components/home/home.component.scss
@@ -1,17 +1,20 @@
 h1 {
   text-align: left;
   padding-left: 85px;
-  background: white;
+  //background: white;
+  //color: #050505;
 }
 h3 {
   text-align: left;
   padding-left:30px;
   background: #EAEAEC;
+  color: #050505;
 
 }
 p {
   text-align: left;
   padding-left:30px;
+  color: #050505;
 }
 
 div {
